@@ -50,9 +50,9 @@ sub dispatch {
 
     my $path = $req->path_info;
     for my $rule (@{$self->_rules}) {
-        if ($path =~ $rule->{path}) {
-            my $args = [ $1, $2, $3, $4, $5, $6, $7, $8, $9 ];
-            return $rule->{handler}->new(application => $self, request => $req, args => $args);
+        my @args = $path =~ $rule->{path};
+        if (@args) {
+            return $rule->{handler}->new(application => $self, request => $req, args => \@args);
         }
     }
 
